# Hexlet-Django-Blog

./: db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: forms.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: index.html  show.html  update.html
hexlet_django_blog/templates/: base.html  index.html
